--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,33 +10,73 @@ html{
 header{
   background-color:  #1b2127;
   height: 7rem;
-  min-width: 98rem;
 }
+/* FUENTE-ICON */
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?s3rr73');
+  src:  url('../fonts/icomoon.eot?s3rr73#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?s3rr73') format('truetype'),
+    url('../fonts/icomoon.woff?s3rr73') format('woff'),
+    url('../fonts/icomoon.svg?s3rr73#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-twitter:before {
+  content: "\e901";
+}
+.icon-facebook:before {
+  content: "\e902";
+}
+.icon-instagram:before {
+  content: "\e904";
+}
+.icon-github:before {
+  content: "\e903";
+}
+.icon-menu:before {
+  content: "\e900";
+}
+
+
 .containerhead{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   margin: 0 auto;
   height: 100%;
-  width: 100rem;
-  align-items: center;
+  max-width: 100rem;
 
 }
 .containerhead > img{
   width: 20rem;
+}
 
-}
-.containerhead nav {
-  display: flex;
-  align-items: center;
-}
 .containerhead ul{
   display: flex;
   list-style: none;
 }
 .containerhead li{
 
-  border: white solid  0.1rem;
-  border-radius: 0.5rem;
+
   margin: 0 0.3rem;
 }
 .containerhead a{
@@ -51,6 +91,7 @@ main{
   width: 100%;
   margin: 0 auto; 
   background-color:  #fafafa;
+  padding: 0 1.4rem;
 }
 h1,
 h2,
@@ -63,18 +104,16 @@ h6
   font-weight: normal;
 }
 .hero{
-  width: 100%;
   background-color:  #1b2127;
-  height: 100%;
   margin: 0 auto;
 }
 .hero div{
   max-width: 100rem;
-  min-width: 32rem;
- margin: 0 auto;
- display: flex;
- justify-content: space-between;
- align-items: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 
 }
 .container-Hero img{
@@ -100,12 +139,12 @@ strong{
   font-family: 'Fjalla One', sans-serif;
 }
 .portfolio{
-  width: 100rem;
+  max-width: 100rem;
   margin: 0 auto;
   background-color:#fafafa;
 }
 .article-portafolio{
-  width: 100%;
+  width: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -114,6 +153,7 @@ strong{
   padding: 2rem;
   margin-bottom: 2rem;
   border-radius: 1rem;
+  flex-wrap: wrap;
 }
 h2{
   color: #026fff;
@@ -126,7 +166,7 @@ h2{
 }
 .content-portafolio{
   width: 50%;
-  height: 25rem;
+  
 }
 .content-portafolio h3{
   font-size: 3rem;
@@ -149,20 +189,20 @@ h2{
 .content-portafolio p{
   font-size: 1.5rem;
 }
-.content-portafolio figure{
+.container-image{
   width: 50%;
 }
 .container-image img{
-  width: 45rem;
-  height: 25rem;
+  width: 100%;
+  height: auto;
 }
 /* Photography */
 .photography{
-  width: 100rem;
+  max-width: 100rem;
   margin: 0 auto;
   display: flex;
-  flex-flow: row wrap;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .article-Photo{
   height: 40.8rem;
@@ -200,27 +240,29 @@ h2{
   border-radius: 5px;
 }
 .Title-photo{
-  width: 100rem;
+  max-width: 100rem;
   margin: 0 auto;
 }
 /* Datos */
 .Datos{
-  width: 100%;
   background-color: #026fff;
-  height: 12.5rem;
+  height: auto;
 }
 
 .container{
-  width: 100rem;
+  max-width: 100rem;
   height: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .Inputs label{
   display: flex;
   flex-direction: column;
+  margin-bottom: 8px;
+  margin-left: 15px;
 
 }
 .Inputs span{
@@ -248,6 +290,7 @@ h2{
   background-color: transparent;
   color: white;
   border: solid white 0.1rem;
+  border-radius: 0.2rem;
   margin-top: 1rem;
   margin: 1rem auto 0 auto;
   
@@ -257,33 +300,30 @@ h2{
   margin: 0px 15px;
   width: 50px;
   height: 50px;
-  background-size: 50px, 50px;
+  font-size: 50px;
+  text-decoration: none;
+  color: white;
+  
 
 }
-.social-link.twitter{
-  background-image: url('D:/C_D/Escuela de desarrollo web/Curso desarrollo web Online/desarrollo-web-portafolio-9/Imagenes y recursos/desarrollo-web-portafolio/images/twitter.svg');
-}
-.social-link.facebook{
- background-image: url('D:/C_D/Escuela de desarrollo web/Curso desarrollo web Online/desarrollo-web-portafolio-9/Imagenes y recursos/desarrollo-web-portafolio/images/facebook.svg');
 
-}
-.social-link.youtube{
- background-image: url('D:/C_D/Escuela de desarrollo web/Curso desarrollo web Online/desarrollo-web-portafolio-9/Imagenes y recursos/desarrollo-web-portafolio/images/github.svg');
-}
-.social-link.instagram{                                                                                                                                                                   
- background-image: url('D:/C_D/Escuela de desarrollo web/Curso desarrollo web Online/desarrollo-web-portafolio-9/Imagenes y recursos/desarrollo-web-portafolio/images/instagram.svg');
-}
 /* Footer */
 footer{
   background-color:  #1b2127;
-  width: 100%;
+  height: 5rem;
+
+}
+.container-foot{
   color: white;
+  max-width: 100rem;
+  height: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5rem;
+  flex-wrap: wrap;
+  font-size: 1.3rem;
 }
-
 .dere img {
   width: 10rem;
   height: 4rem;
@@ -299,4 +339,193 @@ footer{
 }
 .izq{
   padding-right: 1rem ;
+}
+
+/* MEDIA QUERIS */
+@media screen and (max-width:1024px){
+  .hero{
+    height: auto;
+  }
+  .hero img{
+    position: absolute;
+    width:100%;
+    z-index: 0;
+    height: auto;
+
+  }
+  h1{
+    z-index: 1;
+  }
+  .container-Hero{
+    overflow: hidden;
+    height: auto;
+    position: relative;
+    padding: 50px 0;
+  }
+}
+@media screen and (max-width:767px){
+  header{
+    display: block;
+    height: auto;
+  }
+ 
+  .containerhead{
+    display: block;
+    text-align: center;
+    height: auto;
+  }
+  .header__nav{
+    display: flex;
+    justify-content: center;
+  }
+  .header__nav a{
+    font-size: 1.6rem;
+  }
+  .header__nav li{
+    height: 3rem;
+  }
+  .article-portafolio{
+    display: block;
+   /*  max-width: 995px; */
+
+  }
+  .content-portafolio{
+    width: auto;
+    height: initial;
+  }
+  .container-image img{
+    max-width: 450px;
+    text-align: center;
+  }
+  .container-image{
+    text-align: center;
+    width: auto;
+    margin-top: 1rem;
+  }
+  html{
+    font-size: 55%;
+  }
+}
+@media screen and (max-width:605px){
+  .photography{
+    display: block;
+    font-size: 14px;
+  }
+  .article-Photo{
+    width: 100%;
+    height: auto;
+    margin: 1rem 0;
+  }
+  .article-Photo .container-img img{
+    width: 100%;
+    height: 32rem;
+  }
+  .container-texto{
+    width: 80%;
+    height: auto;
+  }
+  .container-texto a{
+    position: relative;
+    top: 1.2rem;
+  }
+  .container-texto p{
+    font-size: 10px;
+   }
+
+  .container{
+    display: block;
+    height: auto;
+  }
+  
+  .Inputs label{
+    align-items: center;
+    margin-bottom: 18px;
+    margin-left: 0;
+  }
+  .Inputs span{
+    margin-top: 10px;
+    position: relative;
+    left: -10px;
+  }
+  .group-input{
+    margin: 0px 0 4px 0;
+  }
+  .social-link{
+    margin-bottom: 10px;
+  }
+  .RedSocial{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .Inputs.submit{
+    margin-bottom: 5px;
+  }
+
+}
+@media screen and (max-width:480px){
+  .header__nav ul{
+    display: initial;
+  }
+  .header__nav{
+    display: block;
+  }
+/*   .content-portafolio{
+    font-size: 15px;
+  }
+  .content-portafolio .description{
+    font-size: .8em;
+  }
+  .content-portafolio .puedes{
+    font-size: 1em;
+  }
+  .content-portafolio.fecha{
+    font-size: 1em;
+  } 
+  .content-portafolio h6{
+    font-size: 1.2em;
+  }
+  .content-portafolio h3{
+    font-size: 1.7em;
+  } */
+  html{
+    font-size: 52%;
+  }
+  .article-Photo .container-img img{
+    width: 100%;
+    height: auto;
+  }
+ .container-texto p{
+  font-size: 11px;
+ }
+ footer{
+   height: auto;
+ }
+ .container-foot{
+  display: block;
+  height: auto;
+ }
+ .dere{
+   padding-left:0 ;
+   height: auto;
+   justify-content: center;
+ }
+ .izq{
+   height: auto;
+   display: flex;
+   justify-content: center; padding-right:0 ;
+ }
+ .izq p{
+  margin-bottom: 10px;
+ 
+ }
+ .container-Hero h1{
+  z-index: 1;
+  font-size: 3.35rem;
+}
+
+ 
+}
+@media screen and (max-width:320px){
+
 }
